--- a/TableChallenges/Challenge_1/style.css
+++ b/TableChallenges/Challenge_1/style.css
@@ -3,7 +3,19 @@
   font-family: "poppins", "verdana";
   box-sizing: border-box;
   color: white;
+  margin: 0;
+  padding: 0;
 }
 body {
   background-color: black;
+}
+.titledisp {
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.btn {
+  background-color: #609ea0;
+  color: black;
 }
