--- a/NavbarChallenges/Challenge_2/style.css
+++ b/NavbarChallenges/Challenge_2/style.css
@@ -1,3 +1,10 @@
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+body {
+  color: white;
+}
 .mynav {
   display: flex;
 }
@@ -6,7 +13,7 @@
   list-style: none;
 }
 .mynav > li > a {
-  background-color: aqua;
+  background-color: rgb(87, 87, 87);
   padding: 5px 50px;
 }
 .mynav > li > a:hover {
